@@ -44,7 +44,7 @@
     <specification.version>@spec.version@</specification.version>
     <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
     <java.compat.version>8</java.compat.version>
-    <!-- HACK: the enforce and forbiddenapis plugin does not like new versioning: -->
+    <!-- HACK: the enforce plugin does not like new versioning: -->
     <java.legacy-compat.version>1.${java.compat.version}</java.legacy-compat.version>
     <jetty.version>9.3.8.v20160314</jetty.version>
 
@@ -161,7 +161,7 @@
         <plugin>
           <groupId>de.thetaphi</groupId>
           <artifactId>forbiddenapis</artifactId>
-          <version>2.1</version>
+          <version>2.2</version>
           <configuration>
             <!--
               This is the default setting, we don't support too new Java versions.
