@@ -1056,6 +1056,10 @@ name|getConfigSetProps
 argument_list|(
 name|oldProps
 argument_list|)
+argument_list|,
+name|StandardCharsets
+operator|.
+name|UTF_8
 argument_list|)
 expr_stmt|;
 block|}
