@@ -40,6 +40,18 @@ begin_import
 import|import
 name|java
 operator|.
+name|nio
+operator|.
+name|charset
+operator|.
+name|StandardCharsets
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|Map
@@ -267,6 +279,10 @@ name|StringBuilder
 argument_list|(
 literal|"{\"immutable\":\"true\"}"
 argument_list|)
+argument_list|,
+name|StandardCharsets
+operator|.
+name|UTF_8
 argument_list|)
 expr_stmt|;
 name|System
